--- a/VRChat/84/1264484.html
+++ b/VRChat/84/1264484.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "Sq67jUsOuCogaUIzGd0Q59KfmxBS1wGIFxpXIyo5N6Q="></script>
+    "AhrSf4wdOqoqjVbj0XCpZEKm3Hlpk/+ZR3nldl051kE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[Vケット2\u00263]LipSyncVisualizer ","description":"★内容物\n音声を可視化する電子デバイスです。\n\n一型は　一直線に並んだゲージが上に向かって動くようになっています。\n\n二型は　上下にゲージがあり、両方が連動して動くようになっています。\n\n三型は　波形グラフのような動きをするものです。　デバイスなどに装着するなどを想定しています。\nまた三型のみβ機能として、形状変化機能が搭載されています。\nデフォルトだと直線状ですが、形状変化を入れると半円状になりこれ単一でのデバイス感をUPします。\n\n四型は　円形で波形グラフのような動きをするものです。\n円形で首に付けたり頭に付けてリングにするなどの使い方を想定しています。\n\n\n☆★どちらもテクスチャなどはなく、モデルのFBXのみとなっています。★☆\n\n何か不具合があれば @Yorin_vrc までお願いします。\n\n\n\n更新履歴:一型のシェイプキーにミスがあったのでVer1.01に更新。恐らく変化は殆ど無いはずなので既にアバターに付けていたとしてもFBX更新で問題なく更新できると思います。\n\n\n\n\n\n★利用規約\n\n◎モデルデータの利用可能範囲\nVRchat以外での利用\t：可\n再配布\t：不可\nモデル改変\t：可\nデータ流用\t：不可\nデータ形式の変換\t：制限あり（制限内容：自分が他の環境で使うための変換はOKです。但し動作保証はしかねます。）\nアバターペデスタルへの配置\t：不可\n商用利用\t：不可\n収益動画への出演\t：可\n性的な表現/グロテスクな表現\t：可\n\nこのデータを使用したことによって起きたいかなることについてYorinは責任は持ちません。","url":"https://booth.pm/ja/items/1264484","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"300","highPrice":"550"},"image":"https://booth.pximg.net/c/620x620/c6dcf68b-82ac-4294-953d-6f3b88111206/i/1264484/0cbf2be5-1097-4a81-86cc-9756caa8f0a2_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Sq67jUsOuCogaUIzGd0Q59KfmxBS1wGIFxpXIyo5N6Q="></script>
+    nonce="AhrSf4wdOqoqjVbj0XCpZEKm3Hlpk/+ZR3nldl051kE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -883,7 +883,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
