--- a/VRChat/27/1169527.html
+++ b/VRChat/27/1169527.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "69xIzFqEgKsVqDG/9SM+pjMa1dOecoL/qUpnisC2QCY="></script>
+    "+d22gN9rDkYU2Y1zW9Bk4eNYUDr8gpBHzO6pQqFvQcI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchatアバター想定3Dモデル ｢Hologroid｣","description":"※※※注意事項※※※\n　この商品は2019年に頒布したVRCSDK2専用のHologroidです。\n　VRCSDK3に対応した新作アバターのHologroid2とは別商品であり、\n　内容が異なりますので、お間違えの無いようお気を付けください。\n　https://nyarbera.booth.pm/items/4076902\n\nVRChatでのアバター利用を想定した、ホログラムで衣服や髪を投影する\n機械人形｢Hologroid(ホログロイド)｣の3Dモデルです。\n改変しやすいよう、パーツごとにメッシュを分けたデータも\n同梱しているほか、ホログラムの色変更だけであれば、\nUnity内のマテリアルの色変えのみで行うことが出来ます。\nShaderはReflex Shader 2.2を使用しています。\n\n映像制作やゲーム等でもお使いいただけるほか、\nシンプルなVRMデータ3色(Red、Blue、Green)を同梱しており、\nclusterやバーチャルキャストなどの\nVRM対応ソフトやサービスなどでも簡単にお使いいただけます。\n\nまたおまけとして、Oculus Quest版VRChatで利用できる\nQuest版最適化アバターを追加しています。\n(PC版想定のものを無理矢理軽量化しているため、見た目に多少の差異があり、色改変にはPC版と違いテクスチャの改変が必要です)\n\n◆モデルスペック\n・ポリゴン数\n　通常版:三角ポリゴン18456　Quest版:三角ポリゴン4871\n　（ホログラムを除くと△12176ポリゴン(Quest版2903)となります）\n・表情アニメーション:9種類(両バージョン共通)\n\n◆データ内容\n・VRChatアバターとしてアップロード出来る状態の\n　unitypackageファイル(VRChatSDK2用)\n　\n◎本unitypackageを利用するには、予めUnityのプロジェクトにVRCSDK2とReflex Shader 2.2をインポートしておく必要があります。\n\n・Textureファイル(png)\n・fbxファイル6種類\n　通常版、Quest版、各3種類\n　　(最軽量版、軽量メッシュ分け版、詳細メッシュ分け版)\n･VRMファイル3種類\n　(Red、Blue、Greenの3色)","url":"https://booth.pm/ja/items/1169527","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/30e40a33-a2bf-4dc4-9660-e928b5be7148/i/1169527/8cb666bd-58eb-43b6-b4d0-f556c59f8650_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="69xIzFqEgKsVqDG/9SM+pjMa1dOecoL/qUpnisC2QCY="></script>
+    nonce="+d22gN9rDkYU2Y1zW9Bk4eNYUDr8gpBHzO6pQqFvQcI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -675,7 +675,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
